--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,13 +20,15 @@ security:
             security: false
         main:
             lazy: true
-#            provider: app_user_provider
-#            custom_authenticator: App\Security\LoginAuthenticator
+            provider: app_user_provider
             switch_user: { role: ROLE_ADMIN }
-#            logout:
-#                path: app_logout
+            custom_authenticator: App\Security\AppAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-#        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
