--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,33 +3,33 @@ version: '3.9'
 services:
   server:
     build: .
-    container_name: 'project_server'
+    container_name: 'urlshortener_server'
     depends_on:
       - database
     networks:
-      - project-network
+      - urlshortener-network
     volumes:
-      - .:/var/www/project
+      - .:/var/www/shortener
 
   proxy:
     image: nginx:1.9.15-alpine
-    container_name: 'project_proxy'
+    container_name: 'urlshortener_proxy'
     ports:
       - target: 80
         published: 8080
         protocol: tcp
     volumes:
       - ./docker/nginx:/etc/nginx/conf.d
-      - ./public:/var/www/project
+      - ./public:/var/www/shortener
     networks:
-      - project-network
+      - urlshortener-network
     depends_on:
       - server
       - database
 
   database:
     image: postgres:14.2-alpine
-    container_name: 'project_database'
+    container_name: 'urlshortener_database'
     environment:
       - POSTGRES_DB=main_dev
       - POSTGRES_PASSWORD=app
@@ -39,14 +39,14 @@ services:
         published: 5432
         protocol: tcp
     networks:
-      - project-network
+      - urlshortener-network
     volumes:
-      - database:/var/lib/postgresql/data
+      - urlshortener-database:/var/lib/postgresql/data
 
 networks:
-  project-network:
+  urlshortener-network:
     driver: bridge
 
 volumes:
-  database:
+  urlshortener-database:
     driver: local
