feat (project) add api & docs

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ APP_SECRET=ad446b6db792f8fa6054cb034343a034
 ###> doctrine/doctrine-bundle ###
 DATABASE_URL=postgresql://app:app@database:5432/main_dev?serverVersion=14.2&charset=utf8
 ###< doctrine/doctrine-bundle ###
+
+APP_DOMAIN=localhost
+APP_SCHEME=http
+APP_PORT=8080
