--- a/docker/nginx/project_local.conf
+++ b/docker/nginx/project_local.conf
@@ -1,5 +1,5 @@
 server {
-    server_name localhost;
+    server_name localhost api.localhost docs.localhost admin.localhost;
     root /var/www/shortener;
 
     client_max_body_size 16M;
