--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "doctrine/orm": "^2.10",
         "easycorp/easyadmin-bundle": "^4.0",
         "hashids/hashids": "^4.1",
+        "nelmio/api-doc-bundle": "^4.8",
         "psr/log": "1.1.4",
         "stof/doctrine-extensions-bundle": "^1.6",
         "symfony/asset": "6.0.*",
@@ -89,7 +90,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "6.0.*"
         }
     }
