--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,3 +1,8 @@
+parameters:
+    app_domain: '%env(APP_DOMAIN)%'
+    app_scheme: '%env(APP_SCHEME)%'
+    app_port: '%env(APP_PORT)%'
+
 services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
